tests/ui/duplicated-options.stderr
error: duplicated option 'a'
 --> $DIR/duplicated-options.rs:8:5
  |
8 |     #[opt = 'a']
  |     ^
